fixed inquiry form z-index

--- a/static/css/listings.css
+++ b/static/css/listings.css
@@ -230,7 +230,7 @@
 .listing-photos-modal, .inquiry-modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 99999;
     top: 0;
     left: 0;
     width: 100%;
@@ -299,7 +299,7 @@
 .inquiry-form {
     width: 600px;
     max-height: 600px;
-    margin: 5% auto 2rem;
+    margin: 5% auto 2rem auto;
     justify-content: center;
     animation-name: modalSlideUp;
     animation-duration: .7s;
